# rule-engine-with-ast

./: README.md
backend/: README.md  main.py  pyproject.toml
backend/rule_engine/: ast_utils.py  database.py  main.py  models.py  parser_utils.py
backend/tests/: test_parser.py  test_tree_traversal.py
frontend/: package-lock.json  package.json
